# tgbot

./: .env.example  .gitignore  BUGFIX_REPORT.md  CLAUDE.md  CODE_REVIEW_IMPROVEMENTS.md  Dockerfile.example  LICENSE  README.md  ROOM.md  UPDATE.md  bot.log.1  docker-compose.example.yml  migrate_ko_to_zh.py  pyproject.toml  requirements.lock.txt  requirements.txt  test_room_commands.py  test_room_integration.py
config/: development.yaml  production.yaml
data/: translator_bot.db  translator_bot_dev.db
docs/: MIGRATION_NOTES.md  TESTING_ROOMS.md  UPDATE.md
monitoring/: README.md  admin_server_monitoring.md  check_bot_status.sh  system_info.sh  telegram_alert.sh
src/: bot.py  main.py
src/core/: app.py  cache.py  config.py  constants.py
src/data/: translator_bot.db
src/handlers/: __init__.py  callbacks.py  commands.py  inline_queries.py  photo.py  reactions.py  room_commands.py  text.py  voice.py
src/middlewares/: __init__.py  rate_limit.py  user_check.py
src/models/: room.py
src/services/: analytics.py  language.py  model_manager.py  room_manager.py  translation.py  vision.py  voice.py
src/states/: room_states.py
src/storage/: database.py
src/utils/: __init__.py  formatting.py  keyboards.py  keyboards.py.backup  room_keyboards.py
tests/: test_config.py  test_database.py  test_language_detection.py
